<resources>
    <string name="app_name">QihanOpenSDK Demo</string>
    <string name="consume_message">Whether consume message</string>
    <string name="speech_synthesis">Speech synthesis</string>
    <string name="pause_synthesis">Pause synthesis</string>
    <string name="continue_synthesis">Continue synthesis</string>
    <string name="sleep">Sleep</string>
    <string name="wake_up">Wake up</string>
    <string name="open_light">Turn on the LED light</string>
    <string name="close_light">Turn off the LED light</string>
    <string name="set_light_strongest">Set the LED light to the brightest lights</string>
    <string name="set_light_dimest">Set the LED light to the darkest lights</string>
    <string name="control_led">Control the LED light</string>
    <string name="head_motion_example">Head movement example sample</string>
    <string name="hand_motion_example">Hands movement example sample</string>
    <string name="wheel_motion_example">Wheels movement example sample</string>
    <string name="service_communication">The communication sample with robot in the Service </string>
    <string name="video_stream_example">Get the video flowing sample</string>
    <string name="face_recognization">Face recognition test</string>
    <string name="get_speak_status">Get the current speak state</string>
    <string name="current_speak_volume">The current user speak volume is：</string>
    <string name="in_wake_up_status">The robot turn into wake up state</string>
    <string name="in_sleep_status">The robot turn into sleep state</string>
    <string name="robot_id">The robot ID is</string>
    <string name="current_speak_progress">The current speech synthesis progress is:</string>
    <string name="stop_wander">Stop wandering</string>
    <string name="start_wander">Start wandering</string>
    <string name="synthesis_finish">Speech synthesis is ended</string>
    <string name="trigger_front_pir">The PIR sensor in front of the robot is triggered</string>
    <string name="off_front_pir">The PIR sensor in front of the robot is off</string>
    <string name="trigger_back_pir">The PIR sensor on the robot back is triggered</string>
    <string name="off_back_pir">The PIR sensor on the robot back is off</string>
    <string name="voice_locate_angle">The current angle of sound localization is </string>
    <string name="mainservice_version">The version of current master control is:</string>
    <string name="touch_jaw_right">You have touched the robot sensor which on the right side chin </string>
    <string name="touch_jaw_left">You have touched the robot sensor which on the left side chin</string>
    <string name="touch_chest_left">You have touched the robot sensor which on the left side chest</string>
    <string name="touch_chest_right">You have touched the robot sensor which on the right side chest</string>
    <string name="touch_back_head_left">You have touched the sensor which on the left back side of the robot head</string>
    <string name="touch_back_head_right">You have touched the sensor which on the right back side of the robot head</string>
    <string name="touch_back_left">You have touched the sensor which on the left side of the robot back</string>
    <string name="touch_back_right">You have touched the sensor which on the right side of the robot back</string>
    <string name="touch_hand_left">You have touched the left hand sensor</string>
    <string name="touch_hand_right">You have touched the right hand sensor</string>
    <string name="touch_head_left">You have touched the left front side sensor on top of the robot head</string>
    <string name="touch_elbow_right">You have touched the right side sensor of the robot elbow</string>
    <string name="touch_muscle_right">You have touched the right side sensor of the robot muscle</string>
    <string name="touch_shoulder_right">You have touched the right side sensor of the robot shoulder</string>
    <string name="touch_elbow_left">You have touched the left side sensor of the robot elbow</string>
    <string name="touch_muscle_left">You have touched the left side sensor of the robot muscle</string>
    <string name="touch_shoulder_left">You have touched the left side sensor of the robot shoulder</string>
    <string name="touch_head_middle">You have touched the sensor on the top of the robot head</string>
    <string name="touch_head_right">You have touched the right front side sensor on top of the robot head</string>
    <string name="infrare_distance">The result of the robot infrared distance measurement is %1$d centimeter.</string>
    <string name="robot_is_speaking">Robot is talking</string>
    <string name="robot_isnot_speaking">Robot is not speaking</string>
    <string name="title">title</string>
    <string name="status">status</string>
    <string name="speech_control">Speech control</string>
    <string name="hardware_control">Hardware control</string>
    <string name="head_control">Head control</string>
    <string name="hand_control">Hand control</string>
    <string name="wheel_control">Wheel control</string>
    <string name="system_control">System control</string>
    <string name="media_control">Media control</string>
    <string name="projector_control">Projector control</string>
    <string name="modularity_control">Modularity control</string>
    <string name="speech_synthesize_start">Start synthesize</string>
    <string name="speech_synthesize_pause">Pause synthesize</string>
    <string name="speech_synthesize_continue">Continue synthesize</string>
    <string name="speech_synthesize_stop">Stop synthesize</string>
    <string name="speech_synthesize_text">Synthesize text :</string>
    <string name="speech_synthesize_lang">Synthesize language :</string>
    <string name="speech_synthesize_speed">Synthesize speed :</string>
    <string name="speech_synthesize_tone">Synthesize tone :</string>
    <string name="speech_synthesize_finish">Synthesize finish :</string>
    <string name="speech_synthesize_progress">Synthesize progress :</string>
    <string name="whether_speaking">speaking ?</string>
    <string name="speaking">Robot is speaking</string>
    <string name="not_speaking">Robot is not speaking</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="speech_synthesize_range">0~100</string>
    <string name="speech_sleep">Sleep</string>
    <string name="speech_wakeup">Wakeup</string>
    <string name="speech_wakeup_status">The robot turn into wakeup state</string>
    <string name="speech_sleep_status">The robot turn into sleep state</string>
    <string name="intercept_message">Intercept message</string>
    <string name="speech_recognize_result">Recognize result :</string>
    <string name="speech_recognize_volume">Recognize volume :</string>
    <string name="white_light_level">White light level</string>
    <string name="open_white_light">Open white light</string>
    <string name="close_white_light">Close white light</string>
    <string name="open_led_light">Open LED light</string>
    <string name="close_led_light">Close LED light</string>
    <string name="touch_sensor">Touch sensor :</string>
    <string name="voice_location">Voice location :</string>
    <string name="pir_sensor">PIR sensor :</string>
    <string name="ri_sensor">RI sensor</string>
    <string name="ultrasonic_sensor">Ultrasonic sensor</string>
    <string name="open_black_line_filter">Open black line filter</string>
    <string name="close_black_line_filter">Close black line filter</string>
    <string name="wake_signal">MCU wake-up signal:</string>
    <string name="got_wake_signal">Received the wake-up signal</string>
    <string name="electronic_lock">Electronic locks</string>
    <string name="hand_state">Hand status:</string>
    <string-array name="electronic_locks">
        <item>Back compartment electronic lock</item>
        <item>Front hanging basket electronic lock</item>
    </string-array>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="gyroscope">gyroscope:</string>
    <string name="gyroscope_result">Yaw angle: %1$.2f°, Pitch angle: %2$.2f°, Roll angle: %3$.2f°</string>
    <string name="mode">mode</string>
    <string-array name="led_part">
        <item>all hand</item>
        <item>all head</item>
        <item>left hand</item>
        <item>right hand</item>
        <item>left head</item>
        <item>right head</item>
    </string-array>
    <string-array name="led_mode">
        <item>white</item>
        <item>red</item>
        <item>green</item>
        <item>pink</item>
        <item>purple</item>
        <item>blue</item>
        <item>yellow</item>
        <item>flicker white</item>
        <item>flicker red</item>
        <item>flicker green</item>
        <item>flicker pink</item>
        <item>flicker purple</item>
        <item>flicker blue</item>
        <item>flicker yellow</item>
        <item>flicker random</item>
    </string-array>
    <string name="random_count">random count</string>
    <string name="led_duration_range">1~255</string>
    <string name="led_random_range">1~7</string>
    <string-array name="hand_parts">
        <item></item>
        <item>Left finger</item>
        <item>Right finger</item>
        <item>Left wrist</item>
        <item>Right wrist</item>
        <item>Left arm</item>
        <item>Right arm</item>
    </string-array>
    <string-array name="hand_status">
        <item>Stop</item>
        <item>Processing</item>
        <item>Complete</item>
        <item>Home error</item>
        <item>End of timeout</item>
        <item>Irregular</item>
    </string-array>
    <string name="battery_level">Battery level</string>
    <string name="battery_state">Battery state</string>
    <string name="charging_by_wire">Charging by wire</string>
    <string name="no_charging">No charging</string>
    <string name="charging_by_pile">Charging by pile</string>
    <string name="back_screen_saver">Back to screen saver</string>
    <string name="emotion_control">Emotion control</string>
    <string name="safe_home_state">Safe home state :</string>
    <string name="shadow_alarm">Shadow alarm</string>
    <string name="invasion_alarm">Invasion alarm</string>
    <string name="boundary_violation_alarm">Boundary violation alarm</string>
    <string name="finger_control">Finger control</string>
    <string name="open_five_fingers">Open five fingers</string>
    <string name="ok_gesture">OK Gesture</string>
    <string name="make_a_fist">Make a fist</string>
    <string name="scissors_gesture">Scissors Gesture</string>
    <string name="thumb">Thumbs</string>
    <string name="tail_finger">Tail Finger</string>
    <string name="love">Love</string>
    <string name="number_1">Number 1</string>
    <string name="number_3">Number 3</string>
    <string name="number_4">Number 4</string>
    <string name="left_hand">Left Hand</string>
    <string name="right_hand">Right Hand</string>
    <string name="both_hand">Both Hands</string>
    <string name="side_lift">Side lift</string>
    <string name="stretch_on_both_sides">Stretching on both sides</string>
    <string name="forward_extension">Forward stretch</string>
    <string name="bend_forward_and_reach_out">Bend forward to reach</string>
    <string name="raise_hand">Raise hand</string>
    <string name="defend">Defense </string>
    <string name="show_muscle">Show muscles</string>
    <string name="reaching_forward_3">Reaching forward 3</string>
    <string name="natural_hand_down_3">Natural hand 3</string>
    <string name="reach_out1">Reach out(flat, narrow)</string>
    <string name="reach_out2">Reach out(high, wide)</string>
    <string name="reach_out3">Reach out (flat, wide)</string>
    <string name="come_on">Refueling</string>
    <string name="reaching_forward">Reach forward</string>
</resources>