<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/left_hand"
            android:layout_width="360px"
            android:layout_height="90px"
            android:background="@drawable/add_new_bg"
            android:text="@string/left_hand"
            android:textAllCaps="false"
            android:textColor="@color/text_white"
            android:textSize="26sp" />

        <Button
            android:id="@+id/right_hand"
            android:layout_width="360px"
            android:layout_height="90px"
            android:layout_marginStart="20px"
            android:layout_marginLeft="20px"
            android:layout_marginEnd="20px"
            android:layout_marginRight="20px"
            android:background="@drawable/stop_bg"
            android:text="@string/right_hand"
            android:textAllCaps="false"
            android:textColor="@color/text_white"
            android:textSize="26sp" />

        <Button
            android:id="@+id/two_hand"
            android:layout_width="360px"
            android:layout_height="90px"
            android:background="@drawable/stop_bg"
            android:text="@string/both_hand"
            android:textAllCaps="false"
            android:textColor="@color/text_white"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/xuxian_bg"
        android:orientation="vertical"
        android:padding="10dp">


        <FrameLayout
            android:id="@+id/contain_fl"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/xuxian_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/finger_control"
                android:textColor="@color/text_white"
                android:textSize="32sp" />

            <Button
                android:id="@+id/finger_1"
                style="@style/btnStyle"
                android:text="@string/open_five_fingers" />

            <Button
                android:id="@+id/finger_2"
                style="@style/btnStyle"
                android:text="@string/ok_gesture" />

            <Button
                android:id="@+id/finger_3"
                style="@style/btnStyle"
                android:text="@string/make_a_fist" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp">

            <Button
                android:id="@+id/finger_4"
                style="@style/btnStyle"
                android:text="@string/scissors_gesture" />

            <Button
                android:id="@+id/finger_5"
                style="@style/btnStyle"
                android:text="@string/thumb" />


            <Button
                android:id="@+id/finger_7"
                style="@style/btnStyle"
                android:text="@string/tail_finger" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp">


            <Button
                android:id="@+id/finger_8"
                style="@style/btnStyle"
                android:text="@string/love" />

            <Button
                android:id="@+id/finger_9"
                style="@style/btnStyle"
                android:text="@string/number_1" />

            <Button
                android:id="@+id/finger_10"
                style="@style/btnStyle"
                android:text="@string/number_3" />

            <Button
                android:id="@+id/finger_11"
                style="@style/btnStyle"
                android:text="@string/number_4" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/xuxian_bg"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:textSize="32sp"
            android:text="@string/hand_state"
            android:textColor="@color/text_white" />

        <TextView
            android:id="@+id/hand_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/text_white" />

    </LinearLayout>
</LinearLayout>
