<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/hand_1"
        style="@style/btnStyle"
        android:text="@string/side_lift"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/hand_3"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <Button
        android:id="@+id/hand_3"
        style="@style/btnStyle"
        android:text="@string/stretch_on_both_sides"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/hand_1"
        app:layout_constraintRight_toLeftOf="@+id/hand_4"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <Button
        android:id="@+id/hand_4"
        style="@style/btnStyle"
        android:text="@string/forward_extension"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/hand_3"
        app:layout_constraintRight_toLeftOf="@+id/hand_6"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <Button
        android:id="@+id/hand_6"
        style="@style/btnStyle"
        android:text="@string/bend_forward_and_reach_out"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/hand_4"
        app:layout_constraintRight_toLeftOf="@+id/hand_7"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <Button
        android:id="@+id/hand_7"
        style="@style/btnStyle"
        android:text="@string/raise_hand"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/hand_6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <Button
        android:id="@+id/hand_12"
        style="@style/btnStyle"
        android:text="@string/defend"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/hand_29"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />


    <Button
        android:id="@+id/hand_29"
        style="@style/btnStyle"
        android:text="@string/show_muscle"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/hand_12"
        app:layout_constraintRight_toLeftOf="@+id/hand_30"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <Button
        android:id="@+id/hand_30"
        style="@style/btnStyle"
        android:text="@string/reaching_forward_3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/hand_29"
        app:layout_constraintRight_toLeftOf="@+id/hand_17"
        app:layout_constraintTop_toBottomOf="@id/guideline2"/>


    <Button
        android:id="@+id/hand_17"
        style="@style/btnStyle"
        android:text="@string/natural_hand_down_3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/hand_30"
        app:layout_constraintRight_toLeftOf="@+id/hand_19"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />


    <Button
        android:id="@+id/hand_19"
        style="@style/btnStyle"
        android:text="@string/reach_out1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/hand_17"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="140dp" />

    <Button
        android:id="@+id/hand_20"
        style="@style/btnStyle"
        android:text="@string/reach_out2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/hand_21"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/hand_21"
        style="@style/btnStyle"
        android:text="@string/reach_out3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/hand_12"
        app:layout_constraintRight_toLeftOf="@id/hand_26"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />


    <Button
        android:id="@+id/hand_26"
        style="@style/btnStyle"
        android:text="@string/come_on"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/hand_21"
        app:layout_constraintRight_toLeftOf="@id/hand_27"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/hand_27"
        style="@style/btnStyle"
        android:text="@string/reaching_forward"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/hand_26"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

</android.support.constraint.ConstraintLayout>